<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Kuba Szczodrzyński 2022-9-27.
  -->

<resources>
    <string name="app_name">Cloudcutter</string>

	<string name="action_connect_custom_ssid">Connect to device\'s new WiFi</string>
	<string name="action_connect_to_device">Connect to smart device WiFi</string>
	<string name="action_connected_to_ssid">Connected: %s</string>
	<string name="action_custom_ap_connect">Connect to CustomAP device (%s)</string>
	<string name="action_custom_ap_setup">Setup CustomAP credentials</string>
	<string name="action_custom_ap_wait_timeout">Wait for CustomAP termination</string>
	<string name="action_finish">Success</string>
	<string name="action_packet_cloudcut">Run exploit to change device keys</string>
	<string name="action_packet_detect_gadget">Find function address: %s</string>
	<string name="action_packet_flash_erase">Erase flash at 0x%X</string>
	<string name="action_packet_flash_write">Write %1$d bytes to 0x%2$X</string>
	<string name="action_packet_proper_fill_intf">Send interface addresses</string>
	<string name="action_packet_stager">Connect smart device to CustomAP</string>
	<string name="action_packet_stager_callback">Configure stager payload</string>
	<string name="action_packet_stager_flash_open">Open flash device</string>
	<string name="action_packet_stager_flash_unprotect">Unprotect flash</string>
	<string name="action_packet_stop_timer">Disable AP mode timeout</string>
	<string name="action_ping_connect">Establish connection with the device</string>
	<string name="action_ping_exploitable">Check if device is exploitable</string>
	<string name="action_ping_lost">Wait for device to stop responding</string>
	<string name="action_ping_respond">Check if device still responds</string>
	<string name="action_prepare">Prepare environment</string>
	<string name="action_scanned_ssid">Found network: %s</string>
	<string name="back">Back</string>
	<string name="cancel">Cancel</string>
	<string name="lightleak_output_directory_text">Output directory</string>
	<string name="lightleak_service_name">Cloudcutter Lightleak Service</string>
	<string name="lightleak_title">Device connected</string>
	<string name="lightleak_warning_text"><![CDATA[Do not minimize the app or turn the screen off.\n\nOtherwise, the connection and reading process will break.]]></string>
	<string name="message_device_reboot_ap_mode">The device exited AP mode and connected to the custom AP. Reboot the device into AP mode once again (usually only 1 reboot is needed now).</string>
	<string name="message_enable_ap_pairing">Put the smart device in AP pairing mode. The light (or LED) should be blinking slowly (every 1–2 seconds).</string>
	<string name="message_error_packet_read_exception">Couldn\'t receive packets from the device. TODO describe this better.</string>
	<string name="message_error_packet_socket_exception">Couldn\'t send the packet to the device, which means it:\n- exited AP mode\n- was frozen by an incompatible Lightleak profile\n- lost connection temporarily.\n\nYou can try repeating this process again, or choosing a different Lightleak profile.</string>
	<string name="message_error_ping_found_timeout">The device doesn\'t respond to ping requests.\n\nThis usually means that an exploit is incompatible, making the device freeze instead of continuing running.\n\nIt can also mean that writing the payload didn\'t succeed, in which case you can try again.</string>
	<string name="message_error_ping_lost_timeout">Ping requests are still successful.\n\nThis means that an exploit is incompatible, so the device didn\'t hang/reboot when it was expected to.</string>
	<string name="message_error_timeout">Timed out waiting for the step to finish</string>
	<string name="message_error_unknown">Unhandled exception: %s</string>
	<string name="message_error_wifi_connect_timeout">Couldn\'t connect to the device.\n\nMake sure it\'s in AP mode and that the network is discoverable.</string>
	<string name="message_error_wifi_scan_timeout">Timed out while scanning for SSID \"%s\".\n\nThe device may have not entered or exited the AP mode.</string>
	<string name="message_exploitable">Good news! The device seems to be exploitable.</string>
	<string name="message_exploited">Running the payload succeeded. The Lightleak dumping screen should open in a few moments.</string>
	<string name="message_running">Cloudcutting is now in progress.\n\nThis window will show any notices or errors that may be important.</string>
	<string name="message_running_mode_info">Do not reboot the device. It should be still blinking slowly (since the last Cloudcutter run).\n\nIf it\'s not in pairing mode, you have to go back and choose one of the first two connection modes.</string>
	<string name="message_start_custom_ap">Make sure that the custom AP device is running and idle. The \"%s\" network has to be available for this to succeed.</string>
	<string name="message_title_error">Error</string>
	<string name="message_title_running">Running…</string>
	<string name="message_type_info">Note</string>
	<string name="message_type_success">Success!</string>
	<string name="message_type_warning">Warning</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	<string name="permission_denied_text">You have denied one or more required permissions to the app.\n\nPlease open Android settings and grant the permissions manually.</string>
	<string name="permission_denied_title">Permissions denied</string>
	<string name="profile_info_title">Current profile</string>
	<string name="profile_type_classic">Classic</string>
	<string name="profile_type_lightleak">Lightleak</string>
	<string name="text_format_string">%s</string>
	<string name="title_devices">Devices</string>
	<string name="title_dumps">My Dumps</string>
	<string name="title_exploit">Cloudcutter</string>
	<string name="title_lightleak">Lightleak</string>
	<string name="title_profiles">Profiles</string>
	<string name="wifi_state_gw_prefix">GW: </string>
	<string name="wifi_state_ip_prefix">IP: </string>
	<string name="wifi_state_no_address">-        </string>
	<string name="wifi_state_no_wifi">No Wi-Fi</string>
	<string name="wifi_state_rssi_format">%d dBm</string>
	<string name="work_directory_dialog_add">-- create a new device --</string>
	<string name="work_directory_dialog_text">Choose a descriptive name of the device you\'re currently connecting to. The dump and profile files will be created in a directory with this name.\n\nIf the process fails for some reason, you\'ll be able to continue dumping using the previously created device.</string>
	<string name="work_directory_dialog_title">Choose output directory</string>
	<string name="work_directory_name_dialog_title">Create a new device</string>
	<string name="work_state_dialog_connected">Connected to AP (timeout disabled)</string>
	<string name="work_state_dialog_raw">Unconfigured</string>
	<string name="work_state_dialog_running">Running - AP mode timeout disabled</string>
	<string name="work_state_dialog_text">What is the current state of the device?\n\nThis may save you some time if you want to re-run the remote dump feature (i.e. in case of errors).\n\nIf in doubt, choose the first option. Other options will not work on a fresh device.\n\nClick OK to choose the state.</string>
	<string name="work_state_dialog_title">Device state</string>
	<string name="work_state_dialog_with_stager">Configured to join CustomAP</string>
	<string name="work_state_preparing">Preparing…</string>
	<string name="work_state_title">Current state</string>
	<string name="work_title">Configuring the device</string>
	<string name="yes">Yes</string>
</resources>
