<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Kuba Szczodrzyński 2022-9-27.
  -->

<navigation
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/nav_graph"
	app:startDestination="@id/menu_devices">

	<fragment
		android:id="@+id/menu_devices"
		android:name="io.github.cloudcutter.ui.device.DeviceListFragment"
		android:label="@string/title_devices"
		tools:layout="@layout/device_list_fragment" />

	<fragment
		android:id="@+id/menu_profiles"
		android:name="io.github.cloudcutter.ui.profile.ProfileListFragment"
		android:label="@string/title_profiles"
		tools:layout="@layout/profile_list_fragment">
		<action
			android:id="@+id/action_menu_profiles_to_menu_work"
			app:destination="@id/menu_work" />
	</fragment>

	<fragment
		android:id="@+id/menu_work"
		android:name="io.github.cloudcutter.ui.work.WorkFragment"
		android:label="@string/title_work"
		tools:layout="@layout/work_fragment">
		<argument
			android:name="profileSlug"
			app:argType="string" />
		<action
			android:id="@+id/action_menu_work_to_menu_lightleak"
			app:destination="@id/menu_lightleak" />
	</fragment>

	<fragment
		android:id="@+id/menu_lightleak"
		android:name="io.github.cloudcutter.ui.lightleak.LightleakFragment"
		android:label="@string/title_lightleak"
		tools:layout="@layout/lightleak_fragment">
		<argument
			android:name="profileSlug"
			app:argType="string" />
	</fragment>
</navigation>
