<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Kuba Szczodrzyński 2022-10-3.
  -->

<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:keepScreenOn="true">

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/work_title"
			android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<include
			android:id="@+id/profileInfo"
			layout="@layout/layout_profile_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/title" />

		<include
			android:id="@+id/wifiState"
			layout="@layout/layout_wifi_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/title" />

		<TextView
			android:id="@+id/stateTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/work_state_title"
			android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
			app:layout_constraintBottom_toTopOf="@+id/stateText"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/profileInfo" />

		<TextView
			android:id="@+id/stateText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:text="@string/work_state_preparing"
			android:textAppearance="@style/TextAppearance.Material3.BodySmall"
			app:layout_constraintBottom_toTopOf="@+id/stateList"
			app:layout_constraintStart_toStartOf="@+id/stateTitle"
			app:layout_constraintTop_toBottomOf="@+id/stateTitle"
			tools:text="Configured to join CustomAP" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/stateList"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintBottom_toTopOf="@+id/messageCard"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/stateText" />

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/messageCard"
			style="?materialCardViewFilledStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="16dp">

				<com.google.android.material.progressindicator.LinearProgressIndicator
					android:id="@+id/messageProgress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="-16dp"
					android:progress="0"
					app:layout_constraintTop_toTopOf="parent"
					tools:progress="66" />

				<com.mikepenz.iconics.view.IconicsImageView
					android:id="@+id/messageIcon"
					android:layout_width="32dp"
					android:layout_height="32dp"
					android:layout_margin="16dp"
					app:iiv_color="?android:textColorPrimary"
					app:iiv_icon="cmd-timer-sand-empty"
					app:iiv_size="32dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:background="@android:drawable/ic_lock_power_off" />

				<TextView
					android:id="@+id/messageTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="16dp"
					android:text="@string/message_title_running"
					android:textAppearance="?attr/textAppearanceTitleMedium"
					app:layout_constraintBottom_toBottomOf="@+id/messageIcon"
					app:layout_constraintStart_toEndOf="@+id/messageIcon"
					app:layout_constraintTop_toTopOf="@+id/messageIcon" />

				<TextView
					android:id="@+id/messageText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="16dp"
					android:layout_marginTop="16dp"
					android:text="@string/message_running"
					android:textAppearance="?attr/textAppearanceBodyMedium"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/messageIcon" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</com.google.android.material.card.MaterialCardView>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
